style.css
/* ... */
#upper-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 91px;
  padding-top: 42px;
  padding-bottom: 28px;
  background-color: rgb(19, 19, 19);
}

#upper-footer #social-icons {
  color: rgb(85, 85, 85);
  display: flex;
  font-size: 14px;
  height: 45px;
  line-height: 21px;
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
  margin-block-end: 21px;
  margin-block-start: 0px;
  margin-bottom: 21px;
}

#upper-footer #social-icons li {
  cursor: pointer;
  color: rgb(85, 85, 85);
  background-color: rgb(51, 51, 51);
  border-bottom-left-radius: 50%;
  border-bottom-right-radius: 50%;
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
  border: 2px solid rgb(51, 51, 51);
  display: inline-block;
  line-height: 21px;
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
  margin-left: 8px;
  margin-right: 8px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  text-align: center;
  color: white;
}

#upper-footer #social-icons li:hover {
  background-color: black;
}

#upper-footer #social-icons li:nth-child(3) i {
  position: relative;
  left: -2.5px;
}

#upper-footer #social-icons li:last-child i {
  position: relative;
  left: -1.5px;
}

.footer-icon i {
  display: inline-block;
  font-size: 16px;
  width: 13px;
  line-height: 16px;
  position: relative;
}

#lower-footer {
  padding: 39px 0;
  min-height: 19px;
  background-color: rgb(0, 0, 0);
}

#footer-links {
  list-style-type: none;
  display: inline-block;
}

#footer-links li {
  display: inline-block;
  margin: 0 6px;
}

#footer-links li a {
  text-decoration: none;
  color: rgb(170, 170, 170);
  cursor: pointer;
  display: inline;
  font-family: 'Rajdhani', sans-serif;
  font-size: 14px;
  font-stretch: 100%;
  font-weight: 500;
  line-height: 24px;
  text-transform: uppercase;
}

#footer-links li a:hover {
  color: white;
}

#lower-footer-wrapper {
  color: rgb(170, 170, 170);
  display: block;
  font-family: 'Work Sans', serif;
  font-size: 13px;
  font-stretch: 100%;
  font-weight: 400;
  min-height: 19px;
  line-height: 19.5px;
  margin-left: 124px;
  margin-right: 124px;
  padding-left: 20px;
  padding-right: 20px;
  text-align: center;
}

#lower-footer-wrapper span {
  color: rgb(170, 170, 170);
  display: inline;
  font-family: 'Work Sans', serif;
  font-size: 13.5px;
  font-stretch: 100%;
  font-weight: 400;
  line-height: 19.5px;
  text-align: center;
  margin: 0 3px;
}

#lower-footer-wrapper a {
  cursor: pointer;
  display: inline;
  font-family: 'Work Sans', serif;
  font-size: 13px;
  font-stretch: 100%;
  font-weight: 400;
  line-height: 19.5px;
  text-align: center;
}

#lower-footer-wrapper a img {
  cursor: pointer;
  display: inline-block;
  font-family: 'Work Sans', serif;
  font-size: 13px;
  font-stretch: 100%;
  font-weight: 400;
  height: 9px;
  line-height: 19.5px;
  margin-right: 1px;
  max-width: 100%;
  text-align: center;
}

